# libchartium

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .release-please-manifest.json  CHANGELOG.md  README.md  build-wasm.sh  build.sh  clean.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1704399464739-45cf079d8d19d.mjs
.github/workflows/: release.yml
src/: App.svelte  Unit.svelte  app.css  app.d.ts  main.ts  types.ts
src-rust/: Cargo.toml
src-rust/src/: data.rs  lib.rs  prelude.rs
src-rust/src/data_module/: mod.rs  traceops.rs
src-rust/src/renderers/: mod.rs  webgl.rs  webgl.ts
src-rust/src/structs/: bulkloader.rs  meta_counter.rs  mod.rs  render_job.rs  seg_numeric.rs
src-rust/src/trace/: batch.rs  bundle.rs  descriptor.rs  extensions.rs  metas.rs  mod.rs  segment.rs  shared_segment.rs  traceops.rs  tuple_segment.rs
src-rust/tests/: any.rs
src/data-worker/: controller.ts
src/lib/: Chart.svelte  GenericTooltip.svelte  ToolFullscreen.svelte  chart.ts  errors.ts  handles.ts  index.ts  mod.ts  types.ts  wasm.ts
src/lib/chart/: ActionsOverlay.svelte  AxisTicks.svelte  Chart.svelte  ChartAxis.svelte  ChartGrid.svelte  ChartLegend.svelte  ChartOverlay.svelte  Guidelines.svelte  Legend.svelte  RulerBubble.svelte  ToolbarButton.svelte  Tooltip.svelte  TracePreview.svelte  TraceTooltip.svelte  axis.ts  axisRange.ts  axisTicks.ts  axisUnits.ts  canvas.ts  chart.ts  chartAffineSpace.ts  chartCanvas.ts  chartRenderer.ts  index.ts  position.ts  utils.scss
src/lib/components/: ActionsOverlay.svelte  ActionsOverlay.ts  AxisTicks.svelte  Chart.svelte  ChartGrid.svelte  Guidelines.svelte  Legend.svelte  LegendEntry.svelte  RulerBubble.svelte  TracePreview.svelte  TraceTooltip.svelte  canvas.ts  index.ts  position.ts
src/lib/contextMenu/: ContextItem.svelte  ContextItemComponent.svelte  ContextMenu.svelte  GenericContextMenu.svelte  SubMenu.svelte  contextMenu.ts  index.ts
src/lib/data/: bundle.ts  controller.ts  data-export.ts  mod.ts  stats-table.ts  trace-export.ts  trace-list.ts  trace-styles.ts  variant-ids.ts
src/lib/data-worker/: bundle.ts  comlink.ts  controller.excalidraw  controller.ts  export.ts  index.ts  spawn.ts  trace-export.ts  trace-list.ts  trace-styles.ts  wasm.ts  worker.ts
src/lib/pie/: LabelLine.svelte  Pie.svelte  pie.ts
src/lib/renderers/: mod.ts  webgl2.ts
src/lib/units/: arithmetics.ts  assert.ts  convert.ts  display.ts  format.ts  mod.ts
src/lib/utils/: color.ts  (+28 more)
src/routes/: +page.svelte  dom-to-image-more.d.ts
src/rust/: Cargo.toml
src/rust/src/: data.rs  lib.rs  types.rs
src/rust/src/renderers/: mod.rs  webgl.rs  webgl.ts
src/rust/src/renderers/webgl/: mod.rs  render_job.rs  trace.rs  trace_geometry.rs  webgl.js
src/rust/src/structs/: adaptive_grid.rs  bulkloader.rs  meta_counter.rs  mod.rs  trace_style.rs
src/rust/src/structs/bulkloader/: data_types.rs  mod.rs
src/rust/src/trace/: batch.rs  bundle.rs  constant_batch.rs  extensions.rs  metas.rs  mod.rs  traceops.rs
src/rust/src/trace/bundle/: containers.rs  mod.rs  vec.rs
src/rust/src/trace_styles/: field_types.rs  mod.rs  resolved_indices.rs  sheet.rs  sheet_builders.rs  style.rs  utils.rs
src/rust/src/utils/: color.rs
src/rust/tests/: trace_styles.rs  web.rs
src/utils/: actions.ts  collection.ts  color.ts  mapOpt.ts  mouseGestures.ts  promise.ts  signal.ts  string.ts  ticks.ts  yeet.ts
(+52 files in other folders)
