[package]
name = "libchartium"
version = "0.3.0"
authors = ["Richard Ivanek <richard.ivanek@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
wasm-bindgen = { version = "0.2.86", features = [ "serde-serialize" ] }
js-sys = "0.3.63"
dyn-clone = "1.0.11"
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.4.0"
chrono = { version = "0.4.25", features=[ "wasmbind" ] }
wasm-streams = "0.3.0"
wasm-bindgen-futures = "0.4.36"
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3.63"
features = [
    'Document',
    'Element',
    'Window',

    'OffscreenCanvas',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
debug = true
