[package]
name = "libchartium"
version = "0.3.0"
authors = ["Richard Ivanek <richard.ivanek@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0.175", features = ["derive"] }
wasm-bindgen = { version = "0.2.87", features = [ "serde-serialize" ] }
js-sys = "0.3.64"
dyn-clone = "1.0.12"
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.4.0"
chrono = { version = "0.4.26", features=[ "wasmbind" ] }
wasm-streams = "0.3.0"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
num-traits = "0.2.16"

[dependencies.web-sys]
version = "0.3.64"
features = [
    'Document',
    'Element',
    'Window',

    'OffscreenCanvas',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
debug = true
