[package]
name = "libchartium"
version = "0.3.0"
authors = [
    "Richard Ivanek <richard.ivanek@gmail.com>",
    "Michal Grno <csha@tutanota.com>",
]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
js-sys = "0.3.69"
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.4.0"
wasm-streams = "0.4.0"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
num-traits = "0.2.18"
tsify = "0.4.5"
optfield = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { features = ["js"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
    'Document',
    'Element',
    'Window',

    'OffscreenCanvas',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = 3
debug = true
# strip = true
